# conv_lowbits_optimization

./: .gitmodules  README.md
cudnn_int8/: CMakeLists.txt  cudnn_conv_float32.cc  cudnn_conv_int8.cc
gemm-int8/: CMakeLists.txt  main.cpp  util.h
gemmlowp-example/: CMakeLists.txt  quantization_example.cc
gemmlowp-example/internal/: CMakeLists.txt
nnpack-convolution-example/: CMakeLists.txt  nnpack-main.cpp
nnpack-convolution-example/cmake/modules/: Findnnpack.cmake
